<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicationCommonEntryFragment">

    <EditText
        android:id="@+id/etTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/topic"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etAbstract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTopic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        app:layout_constraintBottom_toTopOf="@+id/tvAbstract"
        app:layout_constraintEnd_toStartOf="@+id/etTopic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAbstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_abstract"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tvAddedResearchTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAbstract"
        app:layout_constraintTop_toBottomOf="@+id/etTopic" />

    <TextView
        android:id="@+id/tvAbstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_abstract"
        app:layout_constraintBottom_toTopOf="@+id/tvTags"
        app:layout_constraintEnd_toStartOf="@+id/etAbstract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopic" />

    <Spinner
        android:id="@+id/sAddResearchTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cbIsPublic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddedResearchTags" />

    <TextView
        android:id="@+id/tvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddedResearchTags"
        app:layout_constraintEnd_toStartOf="@+id/tvAddedResearchTags"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAddedResearchTags"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAddedResearchTags"
        android:layout_width="wrap_content"
        android:maxWidth="200dp"
        android:layout_height="wrap_content"
        android:hint="Chosen Tags"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/sAddResearchTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTags"
        app:layout_constraintTop_toBottomOf="@+id/etAbstract" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="wrap_content"
        android:maxEms="10"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/content"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvContent"
        app:layout_constraintTop_toBottomOf="@+id/etdDeadline" />

    <TextView
        android:id="@+id/tvIsPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isPublic"
        app:layout_constraintBottom_toBottomOf="@+id/cbIsPublic"
        app:layout_constraintEnd_toStartOf="@+id/cbIsPublic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cbIsPublic" />

    <CheckBox
        android:id="@+id/cbIsPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/etdCreationDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvIsPublic"
        app:layout_constraintTop_toBottomOf="@+id/sAddResearchTag" />

    <TextView
        android:id="@+id/tvDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        app:layout_constraintBottom_toTopOf="@+id/tvContent"
        app:layout_constraintEnd_toStartOf="@+id/etdDeadline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreationDate" />

    <TextView
        android:id="@+id/tvCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_date"
        app:layout_constraintBottom_toTopOf="@+id/tvDeadline"
        app:layout_constraintEnd_toStartOf="@+id/etdCreationDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsPublic" />

    <EditText
        android:id="@+id/etdCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/etdDeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCreationDate"
        app:layout_constraintTop_toBottomOf="@+id/cbIsPublic" />

    <EditText
        android:id="@+id/etdDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/etContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDeadline"
        app:layout_constraintTop_toBottomOf="@+id/etdCreationDate" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etContent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeadline" />



</androidx.constraintlayout.widget.ConstraintLayout>